# InstrumentValveLedgerSystem

./: .gitignore  AGENTS.md  README.md  config.py  init_db.py  pyproject.toml  requirements.txt  test_attachments.py  仪表阀门台账实例.csv  仪表阀门台账实例.xlsx
app/: __init__.py  models.py
app/routes/: __init__.py  admin.py  approvals.py  auth.py  ledgers.py  valves.py
docs/plans/: 2026-02-15-valve-ledger-implementation-plan.md  2026-02-15-valve-ledger-system-design.md  2026-02-23-valve-attachment-design.md  2026-02-23-valve-attachment-implementation.md  2026-02-24-ledger-batch-save-design.md  2026-02-24-ledger-batch-save-plan.md  2026-02-24-ledger-system-redesign.md  2026-02-25-homepage-optimization-design.md  2026-02-25-homepage-optimization-plan.md  2026-02-25-ledger-list-optimization-design.md  2026-02-25-ledger-list-optimization-plan.md  2026-02-25-ledger-list-redesign-design.md  2026-02-25-ledger-list-redesign-plan.md  2026-02-28-ledger-status-snapshot-design.md  2026-02-28-ledger-status-snapshot-plan.md  2026-03-01-ledger-batch-operations-design.md  2026-03-01-ledger-permission-implementation.md  2026-03-01-ledger-permission-refactor.md
scripts/: migrate_ledger_id.py  migrate_ledger_snapshot.py
static/css/: base.css  detail.css  form.css  index.css  ledgers-list.css  my-ledgers.css
static/js/: base.js  form.js  ledgers-detail.js  ledgers-list.js  list.js
templates/: base.html  index.html  index_admin.html  index_employee.html  index_leader.html  login.html
templates/admin/: edit_user.html  index.html  settings.html  (+1 more)
tests/: conftest.py  test_auth.py  test_index.py
(+26 files in other folders)
