[project]
name = "instrumentvalveledgersystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "werkzeug>=3.0.0",
]
